--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">L6_1class</string>
-    <string name="rahultxt">hello Student Wlcome to my class</string>
+    <string name="rahultxt">Hello Student Wlcome to my class</string>
 </resources>
